# mini-aime

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
examples/: simple_task_example.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: EventList.css  EventList.tsx  TaskTree.css  TaskTree.tsx
frontend/src/components/icons/: EventIcons.tsx
frontend/src/styles/: design-tokens.css
scripts/: format.sh  lint.sh
src/api/: __init__.py  main.py
src/config/: logging.py  settings.py
src/core/: __init__.py  actor_factory.py  dynamic_actor.py  dynamic_planner.py  mini_aime.py  models.py  progress_manager.py
src/llm/: __init__.py  base.py
src/tools/: __init__.py  base.py  code_executor.py  file_tools.py  rate_limiter.py  research_integration_tool.py  web_tools.py
tests/: __init__.py  conftest.py  test_brave_search.py  test_dynamic_planner.py  test_llm_client.py  test_mini_aime.py  test_tavily_search.py  test_tools.py  test_travel_tools.py  test_weather_tool.py
